# AlfurController

./: .gitmodules  CMakeLists.txt
include/: bluetooth.h  utils.h
src/: bluetooth.c  main.c
